Update readme and tests for github

--- a/swhwiki/templates/wiki_view.jinja2
+++ b/swhwiki/templates/wiki_view.jinja2
@@ -1,6 +1,6 @@
 {% extends "layout.jinja2" %}
 {% block content %}
-<h1>Wiki</h1>
+<h1>Wiki: Pages</h1>
 
 <a href="{{ request.route_url('wikipage_add') }}">Add
     WikiPage</a>
