--- a/swhwiki/templates/layout.jinja2
+++ b/swhwiki/templates/layout.jinja2
@@ -8,7 +8,7 @@
     <meta name="author" content="Pylons Project">
     <link rel="shortcut icon" href="{{request.static_url('swhwiki:static/pyramid-16x16.png')}}">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
-    <title>Cookiecutter Starter project for the Pyramid Web Framework</title>
+    <title>HiQ Testing Wiki Thing</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -40,7 +40,7 @@
         <div class="row">
           <div class="links">
             <ul>
-              <li><i class="glyphicon glyphicon-cog icon-muted"></i><a href="https://github.com/balp/pyramid">Github Project</a></li>
+              <li><i class="glyphicon glyphicon-cog icon-muted"></i><a href="https://github.com/balp/swhwiki">Github Project</a></li>
             </ul>
           </div>
         </div>
