--- a/swhwiki/templates/layout.jinja2
+++ b/swhwiki/templates/layout.jinja2
@@ -10,8 +10,22 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
     <title>HiQ Testing Wiki Thing</title>
 
-    <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet"
+          href="{{ request.static_url('deform:static/css/bootstrap.min.css') }}"
+          type="text/css" media="screen" charset="utf-8"/>
+    <link rel="stylesheet"
+          href="{{ request.static_url('deform:static/css/form.css') }}"
+          type="text/css"/>
+    {% for reqt in view.reqts['css'] %}
+        <link rel="stylesheet" type="text/css" href="{{ request.static_url(reqt) }}"/>
+    {% endfor %}
+    <script src="{{ request.static_url('deform:static/scripts/jquery-2.0.3.min.js') }}"
+            type="text/javascript"></script>
+    <script src="{{ request.static_url('deform:static/scripts/bootstrap.min.js') }}"
+            type="text/javascript"></script>
+    {% for reqt in view.reqts['js'] %}
+        <link rel="stylesheet" type="text/javascript" href="{{ request.static_url(reqt) }}"/>
+    {% endfor %}
 
     <!-- Custom styles for this scaffold -->
     <link href="{{request.static_url('swhwiki:static/theme.css')}}" rel="stylesheet">
