--- a/swhwiki/templates/wikipage_view.jinja2
+++ b/swhwiki/templates/wikipage_view.jinja2
@@ -1,9 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <title>WikiPage: View</title>
-</head>
-<body>
+{% extends "layout.jinja2" %}
+{% block content %}
 <a href="{{ request.route_url('wiki_view') }}">
     Up
 </a> |
@@ -13,5 +9,4 @@
 
 <h1>{{ page.title }}</h1>
 <p>{{ page.body }}</p>
-</body>
-</html>
+{% endblock content %}
