Add permisions and some layout

--- a/swhwiki/static/theme.css
+++ b/swhwiki/static/theme.css
@@ -18,6 +18,12 @@ h6 {
 p {
   font-weight: 300;
 }
+.btn{
+  text-decoration: none;
+}
+.navbar-brand {
+  text-decoration: none;
+}
 button, input, optgroup, select, textarea {
   color: black;
 }
