--- a/swhwiki/templates/layout.jinja2
+++ b/swhwiki/templates/layout.jinja2
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<html lang="{{request.locale_name}}">
-  <head>
+<html lang="{{ request.locale_name }}">
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="pyramid web application">
     <meta name="author" content="Pylons Project">
-    <link rel="shortcut icon" href="{{request.static_url('swhwiki:static/pyramid-16x16.png')}}">
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="{{ request.static_url('swhwiki:static/pyramid-16x16.png') }}">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
     <title>HiQ Testing Wiki Thing</title>
 
     <link rel="stylesheet"
@@ -28,49 +30,75 @@
     {% endfor %}
 
     <!-- Custom styles for this scaffold -->
-    <link href="{{request.static_url('swhwiki:static/theme.css')}}" rel="stylesheet">
+    <link href="{{ request.static_url('swhwiki:static/theme.css') }}" rel="stylesheet">
 
     <!-- HTML5 shiv and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
-      <script src="//oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js" integrity="sha384-0s5Pv64cNZJieYFkXYOTId2HMA2Lfb6q2nAcx2n0RTLUnCAoTTsS0nKEO27XyKcY" crossorigin="anonymous"></script>
-      <script src="//oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js" integrity="sha384-ZoaMbDF+4LeFxg6WdScQ9nnR1QC2MIRxA1O9KWEXQwns1G8UNyIEZIQidzb0T1fo" crossorigin="anonymous"></script>
+    <script src="//oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"
+            integrity="sha384-0s5Pv64cNZJieYFkXYOTId2HMA2Lfb6q2nAcx2n0RTLUnCAoTTsS0nKEO27XyKcY"
+            crossorigin="anonymous"></script>
+    <script src="//oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"
+            integrity="sha384-ZoaMbDF+4LeFxg6WdScQ9nnR1QC2MIRxA1O9KWEXQwns1G8UNyIEZIQidzb0T1fo"
+            crossorigin="anonymous"></script>
     <![endif]-->
-  </head>
+</head>
 
-  <body>
-
-    <div class="starter-template">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-2">
-            <img class="logo img-responsive" src="{{request.static_url('swhwiki:static/HiQ_logo_pink.png') }}" alt="pyramid web framework">
-          </div>
-          <div class="col-md-10">
-            {% block content %}
-                <p>No content</p>
-            {% endblock content %}
-          </div>
+<body>
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="{{ request.application_url }}">
+                a HiQ Wiki
+            </a>
         </div>
-        <div class="row">
-          <div class="links">
-            <ul>
-              <li><i class="glyphicon glyphicon-cog icon-muted"></i><a href="https://github.com/balp/swhwiki">Github Project</a></li>
+        <div class="container-fluid">
+            <ul class="nav navbar-nav navbar-right">
+            {% if view.logged_in %}
+            <a href="{{ request.application_url }}/logout" role="button" class="btn btn-default navbar-btn">Logout {{ request.authenticated_userid }}</a>
+            {% else %}
+            <a href="{{ request.application_url }}/login" role="button" class="btn btn-default navbar-btn">Login</a>
+            {% endif %}
             </ul>
-          </div>
+        </div>
+    </div>
+</nav>
+<div class="starter-template">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-2">
+                <img class="logo img-responsive" src="{{ request.static_url('swhwiki:static/HiQ_logo_pink.png') }}"
+                     alt="pyramid web framework">
+            </div>
+            <div class="col-md-10">
+                {% block content %}
+                    <p>No content</p>
+                {% endblock content %}
+            </div>
         </div>
         <div class="row">
-          <div class="copyright">
-            Copyright &copy; Anders Arnholm
-          </div>
+            <div class="links">
+                <ul>
+                    <li><i class="glyphicon glyphicon-cog icon-muted"></i><a href="https://github.com/balp/swhwiki">Github
+                        Project</a></li>
+                </ul>
+            </div>
         </div>
-      </div>
+        <div class="row">
+            <div class="copyright">
+                Copyright &copy; Anders Arnholm
+            </div>
+        </div>
     </div>
+</div>
 
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="//code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-  </body>
+<!-- Bootstrap core JavaScript
+================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
+<script src="//code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="
+        crossorigin="anonymous"></script>
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+        integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+        crossorigin="anonymous"></script>
+</body>
 </html>
